--- a/_variables.less
+++ b/_variables.less
@@ -142,7 +142,7 @@
 @cwSocialRatingStarBackgroundAndBorder: #ffda20; //v4.03
 
 /* LIST BOX */
-@cwListBoxPropertyHeaderBackgroundColor: @cwBodyBackgroundColor;
+@cwListBoxPropertyHeaderBackgroundColor: transparent;
 @cwListBoxPropertyHeaderTextColor: @mainColor;
 @cwListBoxPropertyHeaderTextSize: @cwFontMenuTextSize;
 @cwListBoxPropertyHeaderPadding: @cwHeaderPadding;
@@ -179,13 +179,13 @@
 /* ACCORDIONS */
 @cwAccordionHeaderBackgroundColor: @mainColor;
 @cwAccordionHeaderTextColor: @white; //v4.03
-@cwAccordionHeaderHoverBackgroundColor: @lightGray;
+@cwAccordionHeaderHoverBackgroundColor: @cwBodyBackgroundColor;
 @cwAccordionHeaderHoverTextColor: @mainColor;
 
 /* DISCUSSIONS */
 @cwDiscussionsBackgroundColor: @mistGray;
 @cwDiscussionsTextColor: @cwFontTextColor;
-@cwDiscussionsBackgroundColorHover: @lightGray; //v4.03
+@cwDiscussionsBackgroundColorHover: @cwBodyBackgroundColor; //v4.03
 
 /* WORLD MAP */
 @cwJVectorMapCircleBackgroundColor: @mainColor;
