--- a/src/homePage/homePage.css
+++ b/src/homePage/homePage.css
@@ -40,7 +40,7 @@
   /* Handle on hover */
 }
 .homePage_main ::-webkit-scrollbar {
-  width: 10px;
+  width: 0.3rem;
   height: 10px;
 }
 .homePage_main ::-webkit-scrollbar-track {
@@ -58,7 +58,7 @@
   height: 0px;
 }
 .homePage_main .homePage_column .homePage_display {
-  margin: 5px;
+  margin: 0.75rem;
 }
 .homePage_main .homePage_column .homePage_display .cwPropertiesTableHeader span.homePage_display_title,
 .homePage_main .homePage_column .homePage_display .fa.expendIcon {
