--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -14,7 +14,7 @@
   width: 100%;
 
   ::-webkit-scrollbar {
-    width: 10px;
+    width: 0.3rem;
     height: 10px;
   }
 
@@ -39,7 +39,7 @@
     height: 0px;
 
     .homePage_display {
-      margin: 5px;
+      margin: 0.75rem;
 
       .cwPropertiesTableHeader span.homePage_display_title,
       .fa.expendIcon {
