fix issue with background hover

--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -214,13 +214,7 @@
           }
         }
         .linkBox:hover {
-          background-color: @cwDiagramBreadCrumbBackgroundColor;
-          color: @cwBodyBackgroundColor;
-          border: 2px solid @cwDiagramBreadCrumbBackgroundColor;
-          box-sizing: border-box;
-          img {
-            background-color: @cwBodyBackgroundColor;
-          }
+          background-color: rgba(22, 22, 22, 0.1);
         }
       }
 
