--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -1,6 +1,11 @@
 @import "../../_mixins";
 @import "../../_variables";
 
+.cw-home-navigation {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .homePageFav_newImage {
   position: absolute;
   display: none;
@@ -9,6 +14,9 @@
   left: 2px;
 }
 
+#cw-home-navigation-angular {
+  width: 100%;
+}
 .homePage_main {
   display: flex;
   width: 100%;
