link in box better margin

--- a/src/homePage/homePage.css
+++ b/src/homePage/homePage.css
@@ -198,10 +198,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 10px;
+  padding: 1rem;
 }
 .homePage_main .homePage_column .homePage_display .homePage_links_in_bloc .linkBox .link {
-  font-size: 24px;
+  padding: 0.2rem;
+  font-size: 100%;
   width: 100%;
   margin-top: 5px;
   border-top: 2px solid #03a0ce;
