--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -188,10 +188,11 @@
           flex-direction: column;
           justify-content: center;
           align-items: center;
-          margin: 10px;
+          padding: 1rem;
 
           .link {
-            font-size: 24px;
+            padding: 0.2rem;
+            font-size: 100%;
             width: 100%;
             margin-top: 5px;
             border-top: 2px solid @cwDiagramBreadCrumbBackgroundColor;
