fix display of list of item with edge < 79

--- a/src/workflow/cwWorkflow.less
+++ b/src/workflow/cwWorkflow.less
@@ -302,17 +302,17 @@
     }
   }
 }
-
+//IE
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .cwWorkflow .searchList .workFlowListObjectTypeResult .workFlowListObjectTypeResultSubList,
   .cwWorkflow .searchList .workFlowListObjectTypeMessage .workFlowListObjectTypeResultSubList {
     margin-top: 0px !important;
   }
 }
-
+//EDGE <79
 @supports (-ms-ime-align: auto) {
   .cwWorkflow .searchList .workFlowListObjectTypeResult .workFlowListObjectTypeResultSubList,
   .cwWorkflow .searchList .workFlowListObjectTypeMessage .workFlowListObjectTypeResultSubList {
-    margin-top: 0px !important;
+    // margin-top: 0px !important;
   }
 }
