--- a/src/TableComplexeEnhanced/tableComplexeEnhanced.less
+++ b/src/TableComplexeEnhanced/tableComplexeEnhanced.less
@@ -36,3 +36,7 @@ div.k-header.k-grid-toolbar {
   display: inline-flex;
   width: 100%;
 }
+
+.k-grid .k-grid-toolbar .k-button {
+  height: 24px;
+}
