--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -177,7 +177,6 @@
       }
 
       .homePage_links_in_bloc {
-        margin: 5px;
         background: transparent;
         display: flex;
         flex-wrap: wrap;
@@ -189,7 +188,10 @@
           flex-direction: column;
           justify-content: center;
           align-items: center;
-          padding: 1rem;
+          padding-left: 1rem;
+          padding-right: 1rem;
+          padding-top: 0rem;
+          padding-bottom: 0rem;
 
           .link {
             padding: 0.2rem;
