--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -48,6 +48,8 @@
 
     .homePage_display {
       margin: 0.75rem;
+      border: solid 1px @cwColor1;
+      box-sizing: border-box;
 
       .cwPropertiesTableHeader span.homePage_display_title,
       .fa.expendIcon {
@@ -149,7 +151,10 @@
       .homePage_evolveView {
         overflow: auto;
         height: inherit;
-
+        & > .cw-list {
+          padding-left: 0.5rem;
+          padding-right: 0.5rem;
+        }
         .cw-jvector-map {
           height: 100%;
         }
