--- a/src/CoffeeMaker.less
+++ b/src/CoffeeMaker.less
@@ -122,6 +122,7 @@
         border: 1px solid #cccccc;
         padding: 0px 5px;
         height: 30px;
+        background-color: white;
       }
       input {
         border-radius: 4px;
@@ -130,6 +131,7 @@
         border: 1px solid #cccccc;
         padding: 0px 5px;
         height: 30px;
+        background-color: white;
       }
       textarea {
         border-radius: 4px;
@@ -139,6 +141,7 @@
         padding: 0px 5px;
         min-height: 30px;
         resize: vertical;
+        background-color: white;
       }
     }
 
