--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -50,6 +50,7 @@
       margin: 0.75rem;
       border: solid 1px @cwColor1;
       box-sizing: border-box;
+      flex: 1 0 auto;
 
       .cwPropertiesTableHeader span.homePage_display_title,
       .fa.expendIcon {
