--- a/src/count/count.less
+++ b/src/count/count.less
@@ -9,11 +9,15 @@
     display: none;
   }
 }
+.cwLayoutcwCountWrapper {
+  display: flex;
+  width: 100%;
+}
 .countWrapper {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-
+  width: 100%;
   .countItemWrapper {
     border-right: 1px solid #ddd;
     flex: 1 0 auto;
