--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -152,6 +152,7 @@
       .homePage_evolveView {
         overflow: auto;
         height: inherit;
+        display: flex;
         & > .cw-list {
           padding-left: 0.5rem;
           padding-right: 0.5rem;
