readonly and mandatory form, fix bug on stepmapping

--- a/src/workflow/cwWorkflow.css
+++ b/src/workflow/cwWorkflow.css
@@ -29,9 +29,11 @@
   display: flex;
   flex-wrap: wrap;
 }
+.cwWorkflow .readonly {
+  background-color: #dedede;
+}
 .cwWorkflow .selectDropDownList {
   padding: 5px;
-  color: #5c5d61;
   font-size: 12px;
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
@@ -39,6 +41,7 @@
   border: 1px solid rgba(0, 0, 0, 0.2);
   outline: none;
   width: 400px;
+  color: black;
 }
 .cwWorkflow .input.memoInput {
   align-items: flex-start;
