--- a/src/workflow/cwWorkflow.less
+++ b/src/workflow/cwWorkflow.less
@@ -5,10 +5,11 @@
 .cwWorkflow {
   display: flex;
   flex-wrap: wrap;
-
+  .readonly {
+    background-color: rgb(222, 222, 222);
+  }
   .selectDropDownList {
     padding: 5px;
-    color: #5c5d61;
     font-size: 12px;
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
@@ -16,6 +17,7 @@
     border: 1px solid rgba(0, 0, 0, 0.2);
     outline: none;
     width: 400px;
+    color: black;
   }
   .input.memoInput {
     align-items: flex-start;
