--- a/src/workflow/cwWorkflow.css
+++ b/src/workflow/cwWorkflow.css
@@ -57,6 +57,16 @@
   font-size: large;
   font-weight: 700;
   color: #03a0ce;
+  white-space: pre-wrap;
+  /* CSS3 */
+  white-space: -moz-pre-wrap;
+  /* Firefox */
+  white-space: -pre-wrap;
+  /* Opera <7 */
+  white-space: -o-pre-wrap;
+  /* Opera 7 */
+  word-wrap: break-word;
+  /* IE */
 }
 .cwWorkflow .input .value {
   font-size: large;
