--- a/src/workflow/cwWorkflow.less
+++ b/src/workflow/cwWorkflow.less
@@ -32,6 +32,11 @@
       font-size: large;
       font-weight: 700;
       color: @cwJVectorMapPathFilledBackgroundColor;
+      white-space: pre-wrap; /* CSS3 */
+      white-space: -moz-pre-wrap; /* Firefox */
+      white-space: -pre-wrap; /* Opera <7 */
+      white-space: -o-pre-wrap; /* Opera 7 */
+      word-wrap: break-word; /* IE */
     }
     .value {
       font-size: large;
