--- a/src/workflow/cwWorkflow.less
+++ b/src/workflow/cwWorkflow.less
@@ -37,6 +37,7 @@
       white-space: -pre-wrap; /* Opera <7 */
       white-space: -o-pre-wrap; /* Opera 7 */
       word-wrap: break-word; /* IE */
+      text-align: justify;
     }
     .value {
       font-size: large;
