--- a/src/CoffeeMaker.less
+++ b/src/CoffeeMaker.less
@@ -5,7 +5,7 @@
   .fullWidth {
     width: 100% !important;
   }
-
+  width: 100%;
   .CoffeeMakerTab {
     margin: 5px;
     transition: box-shadow 0.3s;
