--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -156,6 +156,7 @@
         & > .cw-list {
           padding-left: 0.5rem;
           padding-right: 0.5rem;
+          width: 100%;
         }
         .cw-jvector-map {
           height: 100%;
