--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -157,6 +157,9 @@
           padding-left: 0.5rem;
           padding-right: 0.5rem;
           width: 100%;
+          &.empty {
+            display: none;
+          }
         }
         .cw-jvector-map {
           height: 100%;
