--- a/src/homePage/homePage.css
+++ b/src/homePage/homePage.css
@@ -171,7 +171,10 @@
   padding-right: 0.5rem;
   width: 100%;
 }
-.homePage_main .homePage_column .homePage_display .homePage_evolveView .cw-jvector-map {
+.homePage_main .homePage_column .homePage_display .homePage_evolveView > .cw-list.empty {
+  display: none;
+}
+.homePage_main .homePage_column .homePage_display .homePage_evolveView cw-list .cw-jvector-map {
   height: 100%;
 }
 .homePage_main .homePage_column .homePage_display .homePage_evolveView .tableForPopoutWrapper {
