--- a/src/TableComplexeEnhanced/tableComplexeEnhanced.less
+++ b/src/TableComplexeEnhanced/tableComplexeEnhanced.less
@@ -3,6 +3,7 @@
 
 .k-grid .k-grid-header .k-header .k-link {
   height: auto;
+  margin-left: 6px;
 }
 
 .k-grid .k-grid-header .k-header {
@@ -39,4 +40,12 @@ div.k-header.k-grid-toolbar {
 
 .k-grid .k-grid-toolbar .k-button {
   height: 24px;
+}
+
+.k-header > .k-grid-filter {
+  float: initial;
+}
+
+.k-grid-header th.k-header > .k-link {
+  display: initial;
 }
