--- a/src/CoffeeMaker.css
+++ b/src/CoffeeMaker.css
@@ -327,3 +327,34 @@
 .CoffeeMaker .workFlowNetwork {
   height: 500px;
 }
+.CoffeeMaker table.coffeeMakerTable {
+  border: none;
+  background-color: white;
+  box-shadow: 0 8px 32px rgba(47, 60, 74, 0.01), 0 8px 16px rgba(47, 60, 74, 0.02);
+  border: solid 1px #e4e4e7;
+  border-radius: 0.25rem;
+  box-sizing: border-box;
+}
+.CoffeeMaker table.coffeeMakerTable tr:last-child {
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
+.CoffeeMaker table.coffeeMakerTable tr:first-child,
+.CoffeeMaker table.coffeeMakerTable thead {
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+}
+.CoffeeMaker table.coffeeMakerTable tr th {
+  text-align: center;
+  border: none;
+  color: #03a0ce;
+  background: white;
+  border-bottom: 1px solid #03a0ce;
+  padding: 5px;
+}
+.CoffeeMaker table.coffeeMakerTable tr td {
+  padding: 5px;
+  border-bottom: 1px solid #03a0ce;
+  border-left: none;
+  border-color: rgba(3, 160, 206, 0.4);
+}
