fix issue with shadow

--- a/src/CoffeeMaker.less
+++ b/src/CoffeeMaker.less
@@ -316,7 +316,7 @@
     border: none;
     background-color: white;
 
-    box-shadow: 0 8px 32px rgb(47 60 74 / 1%), 0 8px 16px rgb(47 60 74 / 2%);
+    box-shadow: 0 8px 32px rgba(47, 60, 74, 1%), 0 8px 16px rgba(47, 60, 74, 2%);
     border: solid 1px #e4e4e7;
     border-radius: 0.25rem;
     box-sizing: border-box;
