--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -59,6 +59,9 @@
           background-color: transparent;
         }
       }
+      &.noPadding {
+        padding: 0rem;
+      }
       &.fixWidth {
         flex: 0 0 auto;
       }
