--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -192,7 +192,9 @@
           }
         }
         .cw-jvector-map {
+          width: 100%;
           height: 100%;
+          border: none;
         }
         .tableForPopoutWrapper {
           overflow: unset;
