Adding Icon Mapping to map

--- a/src/CoffeeMaker.less
+++ b/src/CoffeeMaker.less
@@ -1,6 +1,9 @@
 @import "../../_mixins";
 @import "../../_variables";
 
+body {
+  color: @cwJVectorMapPathFilledBackgroundColor;
+}
 .CoffeeMaker {
   .fullWidth {
     width: 100% !important;
