top toolbar was too big
we hope no bad behaviour

--- a/src/homePage/homePage.css
+++ b/src/homePage/homePage.css
@@ -25,6 +25,9 @@
 /* DIAGRAM TILE */
 /* MATRIX ADVANCED */
 /* DIAGRAM OVERLAY */
+body:not(.cw_print) .page-content-wrap .page-top {
+  width: unset;
+}
 .cw-home-navigation {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
