--- a/src/homePage/homePage.less
+++ b/src/homePage/homePage.less
@@ -1,6 +1,10 @@
 @import "../../_mixins";
 @import "../../_variables";
 
+body:not(.cw_print) .page-content-wrap .page-top {
+  width: unset;
+}
+
 .cw-home-navigation {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
