--- a/ngDirectives/niceList/niceList.css
+++ b/ngDirectives/niceList/niceList.css
@@ -25,53 +25,54 @@
 /* DIAGRAM TILE */
 /* MATRIX ADVANCED */
 /* DIAGRAM OVERLAY */
-.cwDocumentHome {
+.cwNiceList {
   display: flex;
   margin-top: 5px;
   margin-bottom: 5px;
 }
-.cwDocumentHome .nameContainerAndTags {
+.cwNiceList .nameContainerAndTags {
   display: flex;
   flex-direction: column;
   flex: 1;
   color: #03a0ce;
   margin-right: 10px;
 }
-.cwDocumentHome .nameContainerAndTags > div {
+.cwNiceList .nameContainerAndTags > div {
   line-height: 13px;
 }
-.cwDocumentHome .nameContainerAndTags .tags {
+.cwNiceList .nameContainerAndTags .tags {
   margin-top: 1px;
   display: flex;
   flex-wrap: wrap;
 }
-.cwDocumentHome .nameContainerAndTags .tags .tag {
+.cwNiceList .nameContainerAndTags .tags .tag {
   border-radius: 2px;
   padding: 2px 4px 2px 4px;
   margin-right: 2px;
   margin-bottom: 2px;
 }
-.cwDocumentHome .nameContainerAndTags .tags .tag.function {
-  color: #0094dc;
-  background-color: #e1f5ff;
+.cwNiceList .nameContainerAndTags .name {
+  display: flex;
+  align-items: center;
 }
-.cwDocumentHome .nameContainerAndTags .tags .tag.processarea {
-  color: #13d613;
-  background-color: #ddffdd;
+.cwNiceList .nameContainerAndTags .icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 3px;
 }
-.cwDocumentHome .nameContainerAndTags .tags .tag.type {
-  color: #fd6c00;
-  background-color: #fef0e5;
+.cwNiceList .nameContainerAndTags .icon img {
+  height: 14px;
 }
-.cwDocumentHome .date {
+.cwNiceList .date {
   width: 150px;
 }
-.cwDocumentHome .action {
+.cwNiceList .action {
   width: 52px;
 }
-.cwDocumentHome .action .fa.fa-heart {
+.cwNiceList .action .fa.fa-heart {
   color: #03a0ce;
 }
-.cwDocumentHome .action .fa.fa-heart-o {
+.cwNiceList .action .fa.fa-heart-o {
   color: #03a0ce;
 }
